--- a/_includes/social-media-links.html
+++ b/_includes/social-media-links.html
@@ -1,1 +1,6 @@
-Follow me on: <a href="https://twitter.com/Biberbande_I" target="_blank">Twitter</a> | <a href="https://github.com/iBiber"  target="_blank">Github</a> | <a href="https://stackoverflow.com/users/5522710/ibiber?tab=profile" target="_blank">Stackoverflow</a>
+Follow me on:
+  <ul>
+    <li><a href="https://twitter.com/Biberbande_I" target="_blank">Twitter</a></li>
+    <li><a href="https://github.com/iBiber"  target="_blank">Github</a></li>
+    <li><a href="https://stackoverflow.com/users/5522710/ibiber?tab=profile" target="_blank">Stackoverflow</a></li>
+  </ul>
